--- a/fav.html
+++ b/fav.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Coffee Finder</title>
+    <title>FindMe Coffee</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Coffee Finder</h3>
+              <h3 class="masthead-brand">FindMe Coffee</h3>
               <nav>
                 <ul class="nav masthead-nav">
                   <li><a href="index.html">Home</a></li>
@@ -53,8 +53,7 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Coffee Finder</h1>
-            <p class="lead" id="fav">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+            <p class="lead" id="fav"></p>
             <p class="lead">
               <a href="fav.html" class="btn btn-lg btn-default" onclick="clearFavs(); return false;"><i class="fa fa-search"></i>Clear Favourites</a>
             </p>
@@ -62,7 +61,7 @@
 
 		  <div class="mastfoot">
             <div class="inner">
-              <p>Coffee Finder 2015</p>
+              <p>FindMe Coffee 2015</p>
 			  <p><img src="images/google.png"></p>
             </div>
           </div>
