--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Coffee Finder</title>
+    <title>FindMe Coffee</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Coffee Finder</h3>
+              <h3 class="masthead-brand">FindMe Coffee</h3>
               <nav>
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
@@ -54,7 +54,7 @@
 
           <div class="inner cover" data-role="page" id="home">
             <h1 class="cover-heading">Find a nearby coffee shop</h1>
-            <p class="lead">We believe that coffee makes everything better and we know that a good cup of coffee is a pleasure to enjoy. Coffee Finer will help you find your coffee when you really need it wherever you are.</p>
+            <p class="lead">We believe that coffee makes everything better and we know that a good cup of coffee is a pleasure to enjoy. FindMe Coffee will help you find your coffee when you really need it wherever you are.</p>
             <p class="lead">
               <a href="map.html" class="btn btn-lg btn-default">Find Nearby Coffee</a>
             </p>
@@ -72,7 +72,7 @@
 		    -->
 		  <div class="mastfoot">
             <div class="inner">
-              <p>Coffee Finder 2015</p>
+              <p>FindMe Coffee 2015</p>
 			  <p><img src="images/google.png"></p>
             </div>
           </div>
