--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>Coffee Finder</title>
+    <title>FindMe Coffee</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">Coffee Finder</h3>
+              <h3 class="masthead-brand">FindMe Coffee</h3>
               <nav>
                 <ul class="nav masthead-nav">
                   <li><a href="index.html">Home</a></li>
@@ -53,15 +53,15 @@
           </div>
 
           <div class="inner cover">
-            <h1 class="cover-heading">Coffee Finder</h1>
+            <h1 class="cover-heading">FindMe Coffee</h1>
             <p class="lead">Application version 1.0</p>
 			<p class="lead">Release date 05 July 2015</p>
-			<p class="lead">Background made by <a href="https://stocksnap.io/author/2781" title="Freepik">Jeremy Ricketts</a></p>
+			<p class="lead">Background made by <a href="https://stocksnap.io/author/2781" title="Freepik" target="_blank">Jeremy Ricketts</a></p>
           </div>
 
 		  <div class="mastfoot">
             <div class="inner">
-              <p>Coffee Finder 2015</p>
+              <p>FindMe Coffee 2015</p>
 			  <p><img src="images/google.png"></p>
             </div>
           </div>
