--- a/fav.html
+++ b/fav.html
@@ -57,8 +57,29 @@
             <p class="lead">
               <a href="fav.html" class="btn btn-lg btn-default" onclick="clearFavs(); return false;"><i class="fa fa-search"></i>Clear Favourites</a>
             </p>
+			<p class="lead">
+              <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Open Modal</button>
+            </p>
           </div>
+			<div id="myModal" class="modal fade" role="dialog">
+			  <div class="modal-dialog">
 
+				<!-- Modal content-->
+				<div class="modal-content">
+				  <div class="modal-header">
+					<button type="button" class="close" data-dismiss="modal">&times;</button>
+					<h4 class="modal-title">Modal Header</h4>
+				  </div>
+				  <div class="modal-body">
+					<p>Some text in the modal.</p>
+				  </div>
+				  <div class="modal-footer">
+					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+				  </div>
+				</div>
+
+			  </div>
+			</div>
 		  <div class="mastfoot">
             <div class="inner">
               <p>FindMe Coffee 2015</p>
