--- a/fav.html
+++ b/fav.html
@@ -68,13 +68,14 @@
 				<div class="modal-content">
 				  <div class="modal-header">
 					<button type="button" class="close" data-dismiss="modal">&times;</button>
-					<h4 class="modal-title">Modal Header</h4>
+					<h4 class="modal-title">FindMe Coffee</h4>
 				  </div>
 				  <div class="modal-body">
-					<p>Some text in the modal.</p>
+					<p>This will clear favourites!</p>
 				  </div>
 				  <div class="modal-footer">
-					<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+					<button type="button" class="btn btn-default" data-dismiss="modal" onclick="clearFavs(); return false;">Clear</button>
+					<button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
 				  </div>
 				</div>
 
@@ -123,10 +124,8 @@
 		}
 		
 		function clearFavs() {
-			if (confirm("This will clear favourites!") == true) {
-				localStorage.setItem("cofeeFinderFavs", "");
-				window.location.replace("fav.html");
-			} 
+			localStorage.setItem("cofeeFinderFavs", "");
+			window.location.replace("fav.html");
 		}
 	</script>
   </body>
