--- a/fav.html
+++ b/fav.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-    <title>FindMe Coffee</title>
+    <title>NearMe Coffee</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -40,7 +40,7 @@
 
           <div class="masthead clearfix">
             <div class="inner">
-              <h3 class="masthead-brand">FindMe Coffee</h3>
+              <h3 class="masthead-brand">NearMe Coffee</h3>
               <nav>
                 <ul class="nav masthead-nav">
                   <li><a href="index.html">Home</a></li>
@@ -64,7 +64,7 @@
 				<!-- Modal content-->
 				<div class="modal-content">
 				  <div class="modal-header">
-					<h4 class="modal-title" style="color: #000;">FindMe Coffee</h4>
+					<h4 class="modal-title" style="color: #000;">NearMe Coffee</h4>
 				  </div>
 				  <div class="modal-body" style="color: #000;">
 					<p>This will clear favourites!</p>
@@ -79,7 +79,7 @@
 			</div>
 		  <div class="mastfoot">
             <div class="inner">
-              <p>FindMe Coffee 2015</p>
+              <p>NearMe Coffee 2015</p>
 			  <p><img src="images/google.png"></p>
             </div>
           </div>
