--- a/fav.html
+++ b/fav.html
@@ -105,7 +105,11 @@
 			for(var i=0;i<arr.length;i++)
 			{
 				if(arr[i] != "")
+				{
+					arr[i] = arr[i].replace("\'","\\'");
 					document.getElementById("fav").innerHTML += '<a href="#" class="btn btn-lg btn-default" onclick="getFavMap(\''+arr[i]+'\'); return false;">Find Nearby '+arr[i]+'</a><br><br>';
+				}
+					
 			}
 		} else {
 			// Error! No Web Storage support..
