--- a/about.html
+++ b/about.html
@@ -43,9 +43,9 @@
               <h3 class="masthead-brand">NearMe Coffee</h3>
               <nav>
                 <ul class="nav masthead-nav">
-                  <li><a href="index.html">Home</a></li>
+                  <li><a href="#" onclick="gotoHome(); return false;">Home</a></li>
                   <li><a href="map.html">Nearby</a></li>
-				  <li><a href="fav.html">Favourites</a></li>
+				  <li><a href="#" onclick="gotoFavs(); return false;">Favourites</a></li>
                   <li class="active"><a href="#">About</a></li>
                 </ul>
               </nav>
@@ -77,5 +77,18 @@
     <script src="../../dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+	<script>
+	function gotoHome() {
+		window.location.replace("index.html");
+	}
+	
+	function gotoFavs() {
+		window.location.replace("fav.html");
+	}
+	
+	function gotoAbout() {
+		window.location.replace("about.html");
+	}
+	</script>
   </body>
 </html>
