--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <ul class="nav masthead-nav">
                   <li class="active"><a href="#">Home</a></li>
                   <li><a href="map.html">Nearby</a></li>
-				  <li><a href="fav.html">Favourites</a></li>
-                  <li><a href="about.html">About</a></li>
+				  <li><a href="#" onclick="gotoFavs(); return false;">Favourites</a></li>
+                  <li><a href="#" onclick="gotoAbout(); return false;">About</a></li>
                 </ul>
               </nav>
             </div>
@@ -89,5 +89,19 @@
     <script src="../../dist/js/bootstrap.min.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+	
+	<script>
+	function gotoHome() {
+		window.location.replace("index.html");
+	}
+	
+	function gotoFavs() {
+		window.location.replace("fav.html");
+	}
+	
+	function gotoAbout() {
+		window.location.replace("about.html");
+	}
+	</script>
   </body>
 </html>
