--- a/tpl/fav.html
+++ b/tpl/fav.html
@@ -1,37 +1,3 @@
-
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="../../favicon.ico">
-
-    <title>NearMe Coffee</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-	<link href="css/sticky-footer.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="css/cover.css" rel="stylesheet">
-
-    <!-- Just for debugging purposes. Don't actually copy these 2 lines! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-    <script src="../../assets/js/ie-emulation-modes-warning.js"></script>
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-	<link rel="stylesheet" href="css/font-awesome.css">
-  </head>
-
-  <body>
-
     <div class="site-wrapper">
 
       <div class="site-wrapper-inner">
@@ -88,13 +54,6 @@
       </div>
 
     </div>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 	<script>
 		if(typeof(Storage) !== "undefined") {
 			var favs = localStorage.getItem("cofeeFinderFavs");
@@ -125,20 +84,7 @@
 		
 		function clearFavs() {
 			localStorage.setItem("cofeeFinderFavs", "");
-			window.location.replace("fav.html");
+			window.location.replace("index.html#fav");
 		}
 		
-		function gotoHome() {
-			window.location.replace("index.html");
-		}
-		
-		function gotoFavs() {
-			window.location.replace("fav.html");
-		}
-		
-		function gotoAbout() {
-			window.location.replace("about.html");
-		}
 	</script>
-  </body>
-</html>
